--- a/fcc_MAGIC_example.ipynb
+++ b/fcc_MAGIC_example.ipynb
@@ -860,6 +860,7 @@
       "cell_type": "code",
       "source": [
         "svm_model = SVC()\n",
+        "# SVC is our support vector classifiers\n",
         "svm_model = svm_model.fit(X_train, y_train)"
       ],
       "metadata": {
@@ -872,7 +873,8 @@
       "cell_type": "code",
       "source": [
         "y_pred = svm_model.predict(X_test)\n",
-        "print(classification_report(y_test, y_pred))"
+        "print(classification_report(y_test, y_pred))\n",
+        "# here the accuracy of the model has increased and it has become 87 percent now"
       ],
       "metadata": {
         "colab": {
@@ -930,7 +932,7 @@
         "  ax1.set_xlabel('Epoch')\n",
         "  ax1.set_ylabel('Binary crossentropy')\n",
         "  ax1.grid(True)\n",
-        "\n",
+        "# here i have specified on which axis we want to plot which parameters\n",
         "  ax2.plot(history.history['accuracy'], label='accuracy')\n",
         "  ax2.plot(history.history['val_accuracy'], label='val_accuracy')\n",
         "  ax2.set_xlabel('Epoch')\n",
@@ -953,17 +955,21 @@
         "      tf.keras.layers.Dense(num_nodes, activation='relu', input_shape=(10,)),\n",
         "      tf.keras.layers.Dropout(dropout_prob),\n",
         "      tf.keras.layers.Dense(num_nodes, activation='relu'),\n",
+        "       # droupout means rendomaly choose certain nodes and dont train them\n",
         "      tf.keras.layers.Dropout(dropout_prob),\n",
         "      tf.keras.layers.Dense(1, activation='sigmoid')\n",
         "  ])\n",
         "\n",
         "  nn_model.compile(optimizer=tf.keras.optimizers.Adam(lr), loss='binary_crossentropy',\n",
         "                  metrics=['accuracy'])\n",
+        "  # here we are ssimply compiling the model\n",
         "  history = nn_model.fit(\n",
         "    X_train, y_train, epochs=epochs, batch_size=batch_size, validation_split=0.2, verbose=0\n",
         "  )\n",
+        "  # here we are trining the model by decising specific numbers is the epochs\n",
         "\n",
-        "  return nn_model, history"
+        "  return nn_model, history\n",
+        "  # returning the model and the history of the model"
       ],
       "metadata": {
         "id": "kYKih4sF8-sI"
@@ -975,15 +981,20 @@
       "cell_type": "code",
       "source": [
         "least_val_loss = float('inf')\n",
+        "# here i have initiaized the models to infinity\n",
         "least_loss_model = None\n",
         "epochs=100\n",
+        "# and the number is itertaion of the model is 100\n",
         "for num_nodes in [16, 32, 64]:\n",
         "  for dropout_prob in[0, 0.2]:\n",
+        "    # droupout means rendomaly choose certain nodes and dont train them\n",
         "    for lr in [0.01, 0.005, 0.001]:\n",
         "      for batch_size in [32, 64, 128]:\n",
         "        print(f\"{num_nodes} nodes, dropout {dropout_prob}, lr {lr}, batch size {batch_size}\")\n",
+        "        # here i am simply printing the number of nodes and other things\n",
         "        model, history = train_model(X_train, y_train, num_nodes, dropout_prob, lr, batch_size, epochs)\n",
         "        plot_history(history)\n",
+        "        # here we are recording the history of the model\n",
         "        val_loss = model.evaluate(X_valid, y_valid)[0]\n",
         "        if val_loss < least_val_loss:\n",
         "          least_val_loss = val_loss\n",
@@ -2091,7 +2102,7 @@
       "cell_type": "code",
       "source": [
         "y_pred = least_loss_model.predict(X_test)\n",
-        "y_pred = (y_pred > 0.5).astype(int).reshape(-1,)"
+        "y_pred = (y_pred > 0.5).astype(int).reshape(-1,)\n"
       ],
       "metadata": {
         "id": "BZwbID6NBJW2"
